--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Путешествие по России</title>
       </head>
-<body>
-    <header class="header">
+<body class="root">
+    <div class="page">
+        <header class="header">
 
-    </header>
-    <main class="content">
+        </header>
+
         <section class="lead"></section>
         <section class="intro"></section>
         <section class="photo-grid"></section>
         <section class="places"></section>
         <section class="cover"></section>
-    </main>
-    <footer class="footer">
-
-    </footer>
+        
+        <footer class="footer">
+    
+        </footer> 
+    </div>
 </body>
 </html>
