Осталось добавить во все текстовые блоки альтернативные шрифты, закончить адаптив (с lead__image), :hover для всех ссылок, оформить README.md, сверить с чек-листом.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Путешествие по России</title>
       </head>
-<body class="root">
+<body>
     <div class="page">
         <header class="header">
             <img src="./images/__logo.svg" alt="logo" class="header__logo">
-            <div class="header-links">
-                <a href="" class="header-links__lang-link">Ru</a>
-                <a href="" class="header-links__lang-link">En</a>
-            </div>
+            <ul class="header__links">
+                <li class="header__link"><a href="" class="header__link-lang">Ru</a></li>
+                <li class="header__link"><a href="" class="header__link-lang">En</a></li>
+            </ul>
         </header>
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
@@ -52,7 +52,7 @@
                 <img src="./images/kosa.jpg" alt="Куршская коса" class="place__image">
                 <div class="place__website">
                     <p class="place__website-url-heading">url</p>
-                    <a href="" class="place__website-link">park-kosa.ru</a>
+                    <a href="http://park-kosa.ru" class="place__website-link">park-kosa.ru</a>
                 </div>
                 <div class="place__texts">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных    горизонта — спокойного Куршского залива с одной стороны 
@@ -69,7 +69,7 @@
                 <img src="./images/kolsk.jpg" alt="Кольский" class="place__image">
                 <div class="place__website">
                     <p class="place__website-url-heading">url</p>
-                    <a href="" class="place__website-link">National Geographic</a>
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website-link">National Geographic</a>
                 </div>
                 <div class="place__texts">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -85,7 +85,7 @@
                 <img src="./images/altai.jpg" alt="Алтай" class="place__image">
                 <div class="place__website">
                     <p class="place__website-url-heading">url</p>
-                    <a href="" class="place__website-link">Facebook</a>
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website-link">Facebook</a>
                 </div>
                 <div class="place__texts">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -101,7 +101,7 @@
                 <img src="./images/winter-baykal.jpg" alt="Зимний Байкал" class="place__image">
                 <div class="place__website">
                     <p class="place__website-url-heading">url</p>
-                    <a href="" class="place__website-link">https://vk.com/baikalmile</a>
+                    <a href="https://vk.com/baikalmile" class="place__website-link">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__texts">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
@@ -115,18 +115,17 @@
                 <img src="./images/karelia.jpg" alt="Карелия" class="place__image">
                 <div class="place__website">
                     <p class="place__website-url-heading">url</p>
-                    <a href="" class="place__website-link">http://vodlozero.ru/</a>
+                    <a href="http://vodlozero.ru" class="place__website-link">http://vodlozero.ru/</a>
                 </div>
                 <div class="place__texts">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                 </div>
             </div>
         </section>
-        <section class="cover">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
-            <div class="cover__overlay"></div>
-        </section>
+        </a>
         
         <footer class="footer">
             <nav class="menu">
