--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
-                <li class="intro__list-item">Часовых поясов 11</li>
-                <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-                <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-                <li class="intro__list-item">Природных заповедников 105</li>
-                <li class="intro__list-item">Аэропортов 241</li>
+                <li class="intro__list-item">Часовых поясов <span class="intro__list-item-number">11</span></li>
+                <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-item-number">12</span></li>
+                <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-item-number">16</span></li>
+                <li class="intro__list-item">Природных заповедников <span class="intro__list-item-number">105</span></li>
+                <li class="intro__list-item">Аэропортов <span class="intro__list-item-number">241</span></li>
             </ul>
         </section>
         <section class="photo-grid">
@@ -122,19 +122,22 @@
                 </div>
             </div>
         </section>
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
-        </a>
-        
+        <section class="cover">
+                <img src="./images/__background-cover.jpg" alt="вокзал" class="cover__image">
+                <div class="cover__text">
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+                </div>
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link"></a>
+        </section>
         <footer class="footer">
             <nav class="menu">
                 <ul class="menu__links">
-                    <li class="menu__link"><a class="menu__link-text" href="">Карты</a></li>
-                    <li class="menu__link"><a class="menu__link-text" href="">Погода</a></li>
-                    <li class="menu__link"><a class="menu__link-text" href="">Расписание</a></li>
-                    <li class="menu__link"><a class="menu__link-text" href="">Календарь</a></li>
-                    <li class="menu__link"><a class="menu__link-text" href="">Путешествия</a></a></li>
+                    <li class="menu__link"><a class="menu__link-text" href="https://yandex.ru/maps">Карты</a></li>
+                    <li class="menu__link"><a class="menu__link-text" href="https://yandex.ru/pogoda">Погода</a></li>
+                    <li class="menu__link"><a class="menu__link-text" href="https://rasp.yandex.ru">Расписание</a></li>
+                    <li class="menu__link"><a class="menu__link-text" href="https://calendar.yandex.ru">Календарь</a></li>
+                    <li class="menu__link"><a class="menu__link-text" href="https://travel.yandex.ru">Путешествия</a></a></li>
                 </ul>
             </nav>
             <p class="footer__copyright">© 2020. Петр Абакумов</p>
