сделал фон тёмный на более высоких разрешениях

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Путешествие по России</title>
       </head>
-<body>
+<body class="root">
     <div class="page">
         <header class="header">
             <img src="./images/__logo.svg" alt="logo" class="header__logo">
