--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img src="./images/header picture.jpg" alt="купе" class="lead__image">
+            <img src="./images/header-picture.jpg" alt="купе" class="lead__image">
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
@@ -137,7 +137,7 @@
                     <li class="menu__link"><a class="menu__link-text" href="https://yandex.ru/pogoda">Погода</a></li>
                     <li class="menu__link"><a class="menu__link-text" href="https://rasp.yandex.ru">Расписание</a></li>
                     <li class="menu__link"><a class="menu__link-text" href="https://calendar.yandex.ru">Календарь</a></li>
-                    <li class="menu__link"><a class="menu__link-text" href="https://travel.yandex.ru">Путешествия</a></a></li>
+                    <li class="menu__link"><a class="menu__link-text" href="https://travel.yandex.ru">Путешествия</a></li>
                 </ul>
             </nav>
             <p class="footer__copyright">© 2020. Петр Абакумов</p>
