сделал подчеркивание для {RU} модификатором

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="header">
             <img src="./images/__logo.svg" alt="logo" class="header__logo">
             <ul class="header__links">
-                <li class="header__link"><a href="" class="header__link-lang">Ru</a></li>
+                <li class="header__link header__link_lang_ru"><a href="" class="header__link-lang">Ru</a></li>
                 <li class="header__link"><a href="" class="header__link-lang">En</a></li>
             </ul>
         </header>
