--- a/index.html
+++ b/index.html
@@ -126,11 +126,12 @@
         </section>
         <section class="cover">
                 <img src="./images/__background-cover.jpg" alt="вокзал" class="cover__image">
-                <div class="cover__text">
-                    <h2 class="cover__title">До Байкала «на собаках»</h2>
-                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
-                </div>
-                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link"></a>
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
+                    <div class="cover__text">
+                        <h2 class="cover__title">До Байкала «на собаках»</h2>
+                        <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+                    </div>
+                </a>
         </section>
         <footer class="footer">
             <nav class="menu">
